<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wi-Fun-Gi</string>
    <string name="status_label">STATUS</string>
    <string name="transreciever_label">This phone is a:</string>
    <string name="networkget_label">Network GET:</string>
    <string name="networkpost_label">Network POST:</string>
    <string name="networkaudio_label">New Audio:</string>   
    <string name="recording_label">Audio recording:</string> 
    <string name="playback_label">Audio playback:</string>    
    <string name="sensors_label">SENSORS</string>
    <string name="light_label">[44] IOIO Light:</string>
    <string name="misc_label">[46] IOIO PWM Output:</string>
    <string name="debugging_label">DEBUGGING</string>
</resources>